[gd_scene load_steps=3 format=3 uid="uid://dabvnpoxo3xoe"]

[ext_resource type="Script" uid="uid://dbg7cpvypx7u4" path="res://main_menu/MainMenu.gd" id="1_oa53l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa53l"]
bg_color = Color(0.23392546, 0.23392549, 0.23392531, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oa53l")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Margins"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameTitle" type="Label" parent="Margins/VBoxContainer"]
layout_mode = 2
text = "THISTLE"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Margins/VBoxContainer"]
layout_mode = 2

[node name="StartWorldLabel" type="Label" parent="Margins/VBoxContainer"]
layout_mode = 2
text = "Start a world"

[node name="HBoxContainer" type="HBoxContainer" parent="Margins/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="WorldNameInput" type="LineEdit" parent="Margins/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Default"
placeholder_text = "Enter world name..."
alignment = 1

[node name="StartButton" type="Button" parent="Margins/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "CREATE"

[node name="JoinWorldLabel" type="Label" parent="Margins/VBoxContainer"]
modulate = Color(1, 1, 1, 0.8156863)
layout_mode = 2
text = "Join a world"

[node name="HBoxContainer2" type="HBoxContainer" parent="Margins/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="IPInput" type="LineEdit" parent="Margins/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Enter IP address..."
alignment = 1

[node name="JoinButton" type="Button" parent="Margins/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "JOIN"

[node name="QuitButton" type="Button" parent="Margins/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"

[node name="WorldSelectionPanel" type="PanelContainer" parent="Margins"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_oa53l")

[node name="MarginContainer" type="MarginContainer" parent="Margins/WorldSelectionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Margins/WorldSelectionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter new world name..."

[node name="CreateButton" type="Button" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create"

[node name="Label" type="Label" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXISTING WORLDS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World 1"

[node name="Button2" type="Button" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World 2"

[node name="Button3" type="Button" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World 3
"

[node name="HSeparator2" type="HSeparator" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="Margins/WorldSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CANCEL"
